# infnet

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
conf/base/: catalog.yml  parameters.yml  parameters_Aplicacao.yml  parameters_PreparacaoDados.yml  parameters_Treinamento.yml
docs/: pd-ml-ia.excalidraw
docs/source/: conf.py  index.rst
mlruns/616214342273272034/ddf47348d3bd4fe2b71f87f006e6fb52/: meta.yaml
mlruns/616214342273272034/ddf47348d3bd4fe2b71f87f006e6fb52/metrics/: Accuracy  F1 Score  Log Loss
mlruns/616214342273272034/ddf47348d3bd4fe2b71f87f006e6fb52/params/: Modelo
mlruns/616214342273272034/ddf47348d3bd4fe2b71f87f006e6fb52/tags/: mlflow.log-model.history  mlflow.parentRunId  mlflow.runName  mlflow.source.name
mlruns/models/kobe_dt_model/: meta.yaml
mlruns/models/kobe_dt_model/version-1/: meta.yaml
mlruns/models/kobe_lr_model/: meta.yaml
mlruns/models/kobe_lr_model/version-1/: meta.yaml
mlruns/models/kobe_lr_model/version-2/: meta.yaml
notebooks/: PreparacaoDados.ipynb  TestePredict.ipynb  Treinamento.ipynb  data_preparation.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/253479297475384414/: meta.yaml
notebooks/mlruns/253479297475384414/0f8a574a8682477ea7601946c7779233/: meta.yaml
notebooks/mlruns/253479297475384414/42d0826bac074e11b0f21db8a57a0fa7/: meta.yaml
src/infnet/: __init__.py  __main__.py  sklearn_proba_wrapper.py
streamlit/: app.py
(+26 files in other folders)
